--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -83,7 +83,7 @@
                   <a class="nav-link" href="/ranking"><i class="bi bi-trophy" title="crown"></i> Ranking</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/rankingCalendar"><i class="bi bi-calendar" title="calendar"></i> Ranking history</a>
+                  <a class="nav-link" href="/rankingCalendar"><i class="bi bi-calendar" title="calendar"></i> Ranking calendar</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/newest"><i class="bi bi-stars" title="sparkling"></i> Newest</a>
