user page: implement checkpoint

--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -51,13 +51,13 @@
       </div>
     </div>
 
-    <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
+    <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4" id="checkpoint">
       <h2 class="h4 fw-bold mb-3">Category</h2>
       <div class="d-flex flex-wrap">
         {{- baseURL := "/users/" + .User.ID + "/" }}
-        {{- paths := slice("", "illustrations", "manga", "novels", "bookmarks") }}
+        {{- paths := slice("" + "#checkpoint", "illustrations" + "#checkpoint", "manga" + "#checkpoint", "novels" + "#checkpoint", "bookmarks" + "#checkpoint") }}
         {{- names := slice("All", "Illustrations", "Mangas", "Novels", "Bookmarks") }}
-        {{- yield Switcher(baseURL=baseURL, paths=paths, names=names, activeState=.Category) }}
+        {{- yield Switcher(baseURL=baseURL, paths=paths, names=names, activeState=.Category + "#checkpoint") }}
       </div>
     </div>
 
