--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -3,41 +3,38 @@
 {{- import "blocks/switcher" }}
 {{- block body() }}
 <div class="row justify-content-center">
+  {{- if .User.BackgroundImage }}
   <div class="col-12">
-    {{- if ! .User.BackgroundImage }}
-    <div class="bg-body-tertiary rounded-5 p-4 mb-4" style="height: 200px;"></div>
-    {{- else }}
     <div class="bg-body-tertiary rounded-5 p-4 mb-4" style="height: 200px; overflow: hidden;">
       <img src="{{ .User.BackgroundImage }}" alt="{{ .User.Name }}" class="img-fluid w-100 h-100 object-fit-cover" />
     </div>
-    {{- end }}
   </div>
+  {{- end }}
 
   <div class="col-12 col-lg-9">
     <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
       <div class="row g-4">
         <div class="col-12 col-md-3 text-center">
-          <img src="{{.User.Avatar}}" alt="Avatar Of User" class="rounded-circle img-fluid" style="width: 150px; height: 150px; object-fit: cover;">
+          <img src="{{.User.Avatar}}" alt="User avatar" class="rounded-circle img-fluid mb-3" style="width: 150px; height: 150px; object-fit: cover;">
+          <a href="https://pixiv.net/u/{{ .User.ID }}" class="btn btn-secondary rounded-pill btn-sm px-3 mb-3"><i class="bi bi-box-arrow-up-right me-2"></i>View on pixiv.net</a>
         </div>
         <div class="col-12 col-md-9">
-          <h1 class="h3 fw-bold mb-3">{{ .User.Name }}</h1>
-          <p class="mb-2">
-            <a href="https://pixiv.net/u/{{ .User.ID }}" class="text-decoration-none">pixiv.net/u/{{ .User.ID }}</a>
-          </p>
-          <p class="text-muted mb-3">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
+          <h1 class="h3 fw-bold">{{ .User.Name }}</h1>
+          <p class="text-muted">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
           <div class="mb-3">
             {{- if .User.Webpage }}
-            <a href="{{ .User.Webpage }}" class="btn btn-secondary rounded-pill me-2 mb-2">
+            <a href="{{ .User.Webpage }}" class="btn btn-secondary rounded-pill me-2">
               <i class="bi bi-globe"></i>
             </a>
             {{- end }}
             {{- range index, item := .User.Social }}
-            <a href="{{ item.url }}" class="btn btn-secondary rounded-pill me-2 mb-2">
+            <a href="{{ item.url }}" class="btn btn-primary rounded-pill me-2">
               <i class="bi bi-{{ index }}"></i>
             </a>
             {{- end }}
           </div>
-          <p >{{ raw: parsePixivRedirect(.User.Comment) }}</p>
+          <p class="mb-4">{{ raw: parsePixivRedirect(.User.Comment) }}</p>
+
           <div class="card border-0 rounded-5 bg-body-secondary p-4" id="checkpoint">
             <h3 class="h5 fw-bold mb-3"><i class="bi bi-tags-fill"></i> Frequently used tags</h3>
             <div class="d-flex flex-wrap">
