--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -14,9 +14,14 @@
   <div class="col-12 col-lg-9">
     <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
       <div class="row g-4">
-        <div class="col-12 col-md-3 text-center">
-          <img src="{{.User.Avatar}}" alt="User avatar" class="rounded-circle img-fluid mb-3" style="width: 150px; height: 150px; object-fit: cover;">
-          <a href="https://pixiv.net/u/{{ .User.ID }}" class="btn btn-secondary rounded-pill btn-sm px-3 mb-3"><i class="bi bi-box-arrow-up-right me-2"></i>View on pixiv.net</a>
+        <div class="col-12 col-md-3">
+          <div class="d-flex flex-column align-items-center">
+            <img src="{{.User.Avatar}}" alt="User avatar" class="rounded-circle img-fluid object-fit-cover mb-3" style="width: 150px; height: 150px">
+
+            <a href="https://pixiv.net/u/{{ .User.ID }}" class="btn btn-secondary rounded-pill btn-sm px-3 mb-3">
+              <i class="bi bi-box-arrow-up-right me-2"></i>View on pixiv.net
+            </a>
+          </div>
         </div>
         <div class="col-12 col-md-9">
           <h1 class="h3 fw-bold">{{ .User.Name }}</h1>
