--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -28,14 +28,20 @@
           <p class="text-muted">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
           <div class="mb-3">
             {{- if .User.Webpage }}
-            <a href="{{ .User.Webpage }}" class="btn btn-secondary rounded-pill me-2">
+            <a href="{{ .User.Webpage }}" class="btn btn-primary rounded-pill me-2">
               <i class="bi bi-globe"></i>
             </a>
             {{- end }}
             {{- range index, item := .User.Social }}
-            <a href="{{ item.url }}" class="btn btn-primary rounded-pill me-2">
-              <i class="bi bi-{{ index }}"></i>
-            </a>
+              {{- if index == "pawoo" }}
+              <a href="{{ item.url }}" class="btn btn-primary rounded-pill me-2">
+                <i class="bi bi-mastodon"></i>
+              </a>
+              {{- else }}
+              <a href="{{ item.url }}" class="btn btn-primary rounded-pill me-2">
+                <i class="bi bi-{{ index }}"></i>
+              </a>
+              {{- end }}
             {{- end }}
           </div>
           <p class="mb-4">{{ raw: parsePixivRedirect(.User.Comment) }}</p>
