--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -86,7 +86,7 @@
     {{- else }}
 
     <h2 class="h4 fw-bold mb-4">Novels</h2>
-    <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
+    <div class="row row-cols-1 row-cols-lg-2 g-4">
       {{- range .User.Novels }}
       {{- include "fragments/novel-tn" . }}
       {{- end }}
