--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -43,7 +43,7 @@
     <!-- Creates a centered, circular overlay (60x60px) with semi-transparent black background.
          The play icon is centered within this overlay and appears on top of the thumbnail. -->
     {{- if .IllustType == 2 }}
-    <div class="position-absolute top-50 start-50 translate-middle d-flex justify-content-center align-items-center bg-dark bg-opacity-50 rounded-circle" style="width: 60px; height: 60px; z-index: 1;">
+    <div class="position-absolute top-50 start-50 translate-middle d-flex justify-content-center align-items-center bg-dark bg-opacity-50 rounded-circle w-25 h-25">
       <i class="bi bi-play-fill text-white fs-1"></i>
     </div>
     {{- end }}
