--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -37,6 +37,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
+  --bs-custom-color: #7aa2f7;
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -45,6 +46,7 @@
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
+  --bs-custom-color-rgb: 122, 162, 247;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -3127,6 +3129,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #212529;
 }
 
+.btn-custom-color {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #7aa2f7;
+  --bs-btn-border-color: #7aa2f7;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #8eb0f8;
+  --bs-btn-hover-border-color: #87abf8;
+  --bs-btn-focus-shadow-rgb: 104, 138, 210;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #95b5f9;
+  --bs-btn-active-border-color: #87abf8;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #7aa2f7;
+  --bs-btn-disabled-border-color: #7aa2f7;
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3260,6 +3279,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #212529;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #212529;
+  --bs-gradient: none;
+}
+
+.btn-outline-custom-color {
+  --bs-btn-color: #7aa2f7;
+  --bs-btn-border-color: #7aa2f7;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #7aa2f7;
+  --bs-btn-hover-border-color: #7aa2f7;
+  --bs-btn-focus-shadow-rgb: 122, 162, 247;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #7aa2f7;
+  --bs-btn-active-border-color: #7aa2f7;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #7aa2f7;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #7aa2f7;
   --bs-gradient: none;
 }
 
@@ -4888,6 +4924,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-dark-text-emphasis);
 }
 
+.alert-custom-color {
+  --bs-alert-color: var(--bs-custom-color-text-emphasis);
+  --bs-alert-bg: var(--bs-custom-color-bg-subtle);
+  --bs-alert-border-color: var(--bs-custom-color-border-subtle);
+  --bs-alert-link-color: var(--bs-custom-color-text-emphasis);
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5291,6 +5334,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-dark-bg-subtle);
   --bs-list-group-active-bg: var(--bs-dark-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-dark-text-emphasis);
+}
+
+.list-group-item-custom-color {
+  --bs-list-group-color: var(--bs-custom-color-text-emphasis);
+  --bs-list-group-bg: var(--bs-custom-color-bg-subtle);
+  --bs-list-group-border-color: var(--bs-custom-color-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-custom-color-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-custom-color-border-subtle);
+  --bs-list-group-active-color: var(--bs-custom-color-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-custom-color-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-custom-color-text-emphasis);
 }
 
 .btn-close {
@@ -6811,6 +6867,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-dark-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-custom-color {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-custom-color-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: RGBA(var(--bs-primary-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -6881,6 +6942,15 @@ textarea.form-control-lg {
 .link-dark:hover, .link-dark:focus {
   color: RGBA(26, 30, 33, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(26, 30, 33, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-custom-color {
+  color: RGBA(var(--bs-custom-color-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-custom-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-custom-color:hover, .link-custom-color:focus {
+  color: RGBA(149, 181, 249, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(149, 181, 249, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
@@ -7314,6 +7384,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-dark-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-custom-color {
+  --bs-focus-ring-color: rgba(var(--bs-custom-color-rgb), var(--bs-focus-ring-opacity));
+}
+
 .position-static {
   position: static !important;
 }
@@ -7472,6 +7546,11 @@ textarea.form-control-lg {
 .border-dark {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-custom-color {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-custom-color-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-black {
@@ -8425,6 +8504,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-custom-color {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-custom-color-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -8627,6 +8711,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-dark-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-custom-color {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-custom-color-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-link-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -8718,6 +8807,11 @@ textarea.form-control-lg {
 .bg-dark {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-custom-color {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-custom-color-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
