--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -11,6 +11,21 @@ $aspect-ratios: (
   "9x16": calc(16 / 9 * 100%),
 );
 
+@import "./bootstrap/functions";
+@import "./bootstrap/variables";
+@import "./bootstrap/variables-dark";
+
+// Add a custom color to $theme-colors
+$custom-colors: (
+  "custom-color": #7aa2f7
+);
+$theme-colors: map-merge($theme-colors, $custom-colors);
+
+@import "./bootstrap/maps";
+@import "./bootstrap/mixins";
+@import "./bootstrap/utilities";
+
+
 @import "./bootstrap/bootstrap";
 
 /* [data-bs-theme="charcoal"] {
