--- a/assets/views/fragments/thumbnail-dt.jet.html
+++ b/assets/views/fragments/thumbnail-dt.jet.html
@@ -7,7 +7,7 @@
   <!-- Placing the anchor element out here so that the div that contains the tags acts as a hyperlink -->
   <a target="{{ target }}" href="/artworks/{{ .ID }}" class="d-block h-100">
   <div class="position-absolute top-0 start-0 p-2 d-flex justify-content-between w-100">
-    <div class="d-flex flex-column align-items-start">
+    <div class="d-flex flex-column align-items-start z-3">
       <!-- When an artwork is listed on the ranking page -->
       {{- if isset(.Rank) }}
       <span class="badge bg-primary rounded-pill mb-1">{{ .Rank }}</span>
