--- a/assets/views/newest.jet.html
+++ b/assets/views/newest.jet.html
@@ -1,19 +1,18 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="row justify-content-center">
-  <h1 class="h3 fw-bold text-center mb-4">Newest works from all users</h1>
+<div class="row justify-content-start">
+  <h1 class="h3 fw-bold mb-4">Newest works from all users</h1>
 
-  <div class="col-12 col-lg-6">
-    <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
-      <!-- TODO: use Switcher fragment instead -->
-      <h2 class="h4 fw-bold mb-3">Filter</h2>
-      <p class="text-muted">Filter by content rating.</p>
-      <div class="d-flex" aria-label="Filter options">
-        <a href="/newest" class="btn btn-secondary fw-bold rounded-pill me-3">Safe</a>
-        <a href="/newest?mode=r18" class="btn btn-danger fw-bold rounded-pill">R-18</a>
-      </div>
-    </div>
-  </div>
+  <div class="d-flex justify-content-start">
+  <ul class="nav nav-underline mb-4">
+    <li class="nav-item">
+      <a class="fs-5 nav-link fw-bold active border-bottom border-custom-color border-4 px-3" aria-current="page" href="/newest">Safe</a>
+    </li>
+    <li class="nav-item">
+      <a class="fs-5 nav-link fw-bold text-muted border-4 px-3" href="/newest?mode=r18">R-18</a>
+    </li>
+  </ul>
+ </div>
 
     <div class="col-12">
       <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
