--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -3,58 +3,57 @@
 {{- import "blocks/switcher" }}
 {{- block body() }}
 <div class="row justify-content-center">
-  {{- if .User.BackgroundImage }}
-  <div class="col-12">
-    <div class="bg-body-tertiary rounded-5 p-4 mb-4" style="height: 200px; overflow: hidden;">
-      <img src="{{ .User.BackgroundImage }}" alt="{{ .User.Name }}" class="img-fluid w-100 h-100 object-fit-cover" />
-    </div>
-  </div>
-  {{- end }}
-
   <div class="col-12 col-lg-9">
-    <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
-      <div class="row g-4">
-        <div class="col-12 col-md-3">
-          <div class="d-flex flex-column align-items-center">
-            <img src="{{.User.Avatar}}" alt="User avatar" class="rounded-circle img-fluid object-fit-cover mb-3" style="width: 150px; height: 150px">
+    <div class="card border-0 rounded-5 bg-body-tertiary mb-4">
+      {{- if .User.BackgroundImage }}
+      <img src="{{ .User.BackgroundImage }}" alt="{{ .User.Name }}"
+           class="img-fluid w-100 rounded-bottom rounded-5 object-fit-cover mb-3"
+           style="max-height: 200px; object-fit: cover;" />
+      {{- end }}
+      <div class="card-body p-4">
+        <div class="row g-4">
+          <div class="col-12 col-md-3">
+            <div class="d-flex flex-column align-items-center">
+              <img src="{{.User.Avatar}}" alt="User avatar" class="rounded-circle img-fluid object-fit-cover mb-3" style="width: 150px; height: 150px">
 
-            <a href="https://pixiv.net/u/{{ .User.ID }}" class="btn btn-secondary rounded-pill btn-sm px-3 mb-3">
-              <i class="bi bi-box-arrow-up-right me-2"></i>View on pixiv.net
-            </a>
-          </div>
-        </div>
-        <div class="col-12 col-md-9">
-          <h1 class="h3 fw-bold">{{ .User.Name }}</h1>
-          <p class="text-muted">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
-          <div class="mb-3">
-            {{- if .User.Webpage }}
-            <a href="{{ .User.Webpage }}" class="btn btn-primary rounded-pill me-2">
-              <i class="bi bi-globe"></i>
-            </a>
-            {{- end }}
-            {{- range index, item := .User.Social }}
-              {{- if index == "pawoo" }}
-              <a href="{{ item.url }}" class="btn btn-primary rounded-pill me-2">
-                <i class="bi bi-mastodon"></i>
+              <a href="https://pixiv.net/u/{{ .User.ID }}" class="btn btn-secondary rounded-pill btn-sm px-3 mb-3">
+                <i class="bi bi-box-arrow-up-right me-2"></i>View on pixiv.net
               </a>
-              {{- else }}
-              <a href="{{ item.url }}" class="btn btn-primary rounded-pill me-2">
-                <i class="bi bi-{{ index }}"></i>
+            </div>
+          </div>
+          <div class="col-12 col-md-9">
+            <h1 class="h3 fw-bold">{{ .User.Name }}</h1>
+            <p class="text-muted">{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv</p>
+            <div class="mb-3">
+              {{- if .User.Webpage }}
+              <a href="{{ .User.Webpage }}" class="btn btn-custom-color text-body rounded-pill me-2">
+                <i class="bi bi-globe"></i>
               </a>
               {{- end }}
-            {{- end }}
-          </div>
-          <p class="mb-4">{{ raw: parsePixivRedirect(.User.Comment) }}</p>
-
-          <div class="card border-0 rounded-5 bg-body-secondary p-4" id="checkpoint">
-            <h3 class="h5 fw-bold mb-3"><i class="bi bi-tags-fill"></i> Frequently used tags</h3>
-            <div class="d-flex flex-wrap">
-              {{- range .User.FrequentTags }}
-                <span class="badge fw-normal text-muted me-2 mb-2 p-0 text-wrap text-break text-start">
-                  <a href="/tags/{{ escapeString(.Name) }}" class="text-decoration-none text-wrap text-break">#{{ .Name }}</a>
-                  {{- if .TranslatedName }} <small>({{ .TranslatedName }})</small>{{- end }}
-                </span>
+              {{- range index, item := .User.Social }}
+                {{- if index == "pawoo" }}
+                <a href="{{ item.url }}" class="btn btn-custom-color text-body rounded-pill me-2">
+                  <i class="bi bi-mastodon"></i>
+                </a>
+                {{- else }}
+                <a href="{{ item.url }}" class="btn btn-custom-color text-body rounded-pill me-2">
+                  <i class="bi bi-{{ index }}"></i>
+                </a>
+                {{- end }}
               {{- end }}
+            </div>
+            <p class="mb-4">{{ raw: parsePixivRedirect(.User.Comment) }}</p>
+
+            <div class="card border-0 rounded-5 bg-body-secondary p-4" id="checkpoint">
+              <h3 class="h5 fw-bold mb-3"><i class="bi bi-tags-fill"></i> Frequently used tags</h3>
+              <div class="d-flex flex-wrap">
+                {{- range .User.FrequentTags }}
+                  <span class="badge fw-normal text-muted me-2 mb-2 p-0 text-wrap text-break text-start">
+                    <a href="/tags/{{ escapeString(.Name) }}" class="text-decoration-none text-wrap text-break">#{{ .Name }}</a>
+                    {{- if .TranslatedName }} <small>({{ .TranslatedName }})</small>{{- end }}
+                  </span>
+                {{- end }}
+              </div>
             </div>
           </div>
         </div>
